--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li><a href="#contact" class="nav-link">Contact</a></li>
     </ul>
 
-    <a href="#destinations" class="btn-primary">Start Exploring</a>
+    <a href="#destinations" class="btn-primary" id="bookNowBtn">Book Now</a>
 </nav>
 
 <!-- ================= HERO ================= -->
@@ -86,51 +86,50 @@
                 <h3>Coorg</h3>
                 <p>Misty hills, coffee plantations, and peaceful escapes.</p>
             </div>
-
             <div class="destination-card">
                 <img src="images/dest2-hampi.jpg" alt="Hampi">
                 <h3>Hampi</h3>
                 <p>Ancient ruins and timeless heritage landscapes.</p>
             </div>
-
             <div class="destination-card">
                 <img src="images/dest3-gokarna.jpg" alt="Gokarna">
                 <h3>Gokarna</h3>
                 <p>Serene beaches with spiritual charm.</p>
             </div>
-
             <div class="destination-card">
                 <img src="images/dest4-jogfalls.jpg" alt="Jog Falls">
                 <h3>Jog Falls</h3>
                 <p>One of India’s tallest and most majestic waterfalls.</p>
             </div>
-
             <div class="destination-card">
                 <img src="images/dest5-chikmagalur.jpg" alt="Chikmagalur">
                 <h3>Chikmagalur</h3>
                 <p>Coffee estates surrounded by lush green mountains.</p>
             </div>
-
             <div class="destination-card">
                 <img src="images/dest6-kabini.jpg" alt="Kabini">
                 <h3>Kabini</h3>
                 <p>Wildlife safaris and riverside adventures.</p>
             </div>
-            
             <div class="destination-card">
-                <img src="images/dest7-shivanasamudra.jpg" alt="Chikmagalur">
+                <img src="images/dest7-shivanasamudra.jpg" alt="Shivanasamudra">
                 <h3>Shivanasamudra</h3>
-                <p>A breathtaking waterfall on the Kaveri River, known for its twin falls (Gaganachukki & Bharachukki). </p>
+                <p>Breathtaking twin waterfalls (Gaganachukki & Bharachukki).</p>
             </div>
-
             <div class="destination-card">
-                <img src="images/dest8-bandipur.jpg" alt="Kabini">
+                <img src="images/dest8-bandipur.jpg" alt="Bandipur">
                 <h3>Bandipur National Park</h3>
                 <p>A key tiger reserve, offering abundant wildlife and lush forests.</p>
             </div>
         </div>
+
+        <!-- DESTINATIONS CONTINUE BUTTON -->
+        <div class="continue-container">
+            <button id="destContinueBtn" class="disabled" disabled>Continue</button>
+        </div>
     </div>
 </section>
+
 
 <!-- ================= SERVICES ================= -->
 <section id="services" class="section">
@@ -163,8 +162,15 @@
                 <p>Experience traditions, temples, and local life.</p>
             </div>
         </div>
+
+        <!-- Continue Button -->
+       <div class="continue-container">
+    <button id="continueBtn" onclick="goToContact()" class="disabled" disabled>Continue</button>
+</div>
+
     </div>
 </section>
+
 
 <!-- ================= CONTACT ================= -->
 <section id="contact" class="section contact">
@@ -175,6 +181,7 @@
         <form class="contact-form">
             <input type="text" placeholder="Your Name" required>
             <input type="email" placeholder="Your Email" required>
+            <input type="number" placeholder="Your Mobile Number" required>
             <textarea rows="4" placeholder="Your Message"></textarea>
             <button type="submit">Send Message</button>
         </form>
@@ -183,5 +190,15 @@
 
 <!-- ================= JS ================= -->
 <script src="script.js"></script>
+<div class="login-modal" id="loginModal">
+  <div class="login-box">
+    <h2>Login to Continue</h2>
+    <input type="email" placeholder="Email" required>
+    <input type="tel" placeholder="Phone Number" required>
+    <input type="password" placeholder="Password" required>
+    <button>Login</button>
+  </div>
+</div>
+
 </body>
 </html>
